feat: add the `StoneOfTheSea` curio

--- a/src/main/resources/assets/curious_curios/lang/en_us.json
+++ b/src/main/resources/assets/curious_curios/lang/en_us.json
@@ -4,5 +4,6 @@
   "item.curious_curios.glowing_nugget": "Glowing Nugget",
   "item.curious_curios.glowing_powder": "Glowing Powder",
   "item.curious_curios.glowing_gem": "Glowing Gem",
-  "item.curious_curios.ring_of_enchanted_eyes": "Ring of Enchanted Eyes"
+  "item.curious_curios.ring_of_enchanted_eyes": "Ring of Enchanted Eyes",
+  "item.curious_curios.stone_of_the_sea": "Stone of the Sea"
 }
