--- a/src/main/resources/assets/curious_curios/lang/en_us.json
+++ b/src/main/resources/assets/curious_curios/lang/en_us.json
@@ -6,5 +6,6 @@
   "item.curious_curios.glowing_gem": "Glowing Gem",
   "item.curious_curios.ring_of_enchanted_eyes": "Ring of Enchanted Eyes",
   "item.curious_curios.stone_of_inertia_null": "Stone of Inertia Null",
-  "item.curious_curios.stone_of_the_sea": "Stone of the Sea"
+  "item.curious_curios.stone_of_the_sea": "Stone of the Sea",
+  "item.curious_curios.stone_of_greater_inertia": "Stone of Greater Inertia"
 }
