feat: wither ring

--- a/src/main/resources/assets/curious_curios/lang/en_us.json
+++ b/src/main/resources/assets/curious_curios/lang/en_us.json
@@ -7,5 +7,6 @@
   "item.curious_curios.ring_of_enchanted_eyes": "Ring of Enchanted Eyes",
   "item.curious_curios.stone_of_inertia_null": "Stone of Inertia Null",
   "item.curious_curios.stone_of_the_sea": "Stone of the Sea",
-  "item.curious_curios.stone_of_greater_inertia": "Stone of Greater Inertia"
+  "item.curious_curios.stone_of_greater_inertia": "Stone of Greater Inertia",
+  "item.curious_curios.wither_ring": "Wither Ring"
 }
